rust/pattern_c.rs

extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Retrieves a work set from the pool associated with the provider. In multi"]
    #[doc = " threaded operation will always return a work set. In single threaded"]
    #[doc = " operation may return NULL if no work sets are available in the pool."]
    #[doc = " The work set returned must be released back to the provider by calling"]
    #[doc = " fiftyoneDegreesWorksetRelease when finished with."]
    #[doc = " @param provider pointer to the provider to return the work set from"]
    #[doc = " @return pointer to a work set ready to be used for device detection"]
    pub fn fiftyoneDegreesProviderWorksetGet(
        provider: *mut fiftyoneDegreesProvider,
    ) -> *mut fiftyoneDegreesWorkset;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Returns the work set back to the pool it was created from."]
    #[doc = " Worksets created without a pool should be freed using the method"]
    #[doc = " fiftyoneDegreesWorksetFree."]
    #[doc = " @param ws a workset that was created from a pool or provider."]
    pub fn fiftyoneDegreesWorksetRelease(ws: *mut fiftyoneDegreesWorkset);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Initialises the data set passed to the method with the data from"]
    #[doc = " the file provided. If required properties is provided the data set"]
    #[doc = " will only return those contained in the array."]
    #[doc = " @param fileName of the data source to use for initialisation"]
    #[doc = " @param dataSet pointer that will be set to the data set created"]
    #[doc = " @param properties array of strings containing the property names"]
    #[doc = " @param count the number of elements in the properties array"]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of creating"]
    #[doc = "\t\t   the new dataset, work set pool and User-Agent cache. If status is"]
    #[doc = "         anything other than DATA_SET_INIT_STATUS_SUCCESS, then the"]
    #[doc = "         initialization has failed."]
    pub fn fiftyoneDegreesInitWithPropertyArray(
        fileName: *const ::std::os::raw::c_char,
        dataSet: *mut fiftyoneDegreesDataSet,
        properties: *mut *const ::std::os::raw::c_char,
        count: i32,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Initialises the data set passed to the method with the data from"]
    #[doc = " the file provided. If required properties is provided the data set"]
    #[doc = " will only return those listed and separated by comma, pipe, space"]
    #[doc = " or tab."]
    #[doc = " @param fileName of the data source to use for initialisation"]
    #[doc = " @param dataSet pointer that will be set to the data set created"]
    #[doc = " @param properties char array to the separated list of properties"]
    #[doc = "        the dataSet can return"]
    #[doc = " @return fiftyoneDegreesDataSetInitStatus indicating the result of creating"]
    #[doc = "\t\t   the new dataset, work set pool and User-Agent cache. If status is"]
    #[doc = "         anything other than DATA_SET_INIT_STATUS_SUCCESS, then the"]
    #[doc = "         initialization has failed."]
    pub fn fiftyoneDegreesInitWithPropertyString(
        fileName: *const ::std::os::raw::c_char,
        dataSet: *mut fiftyoneDegreesDataSet,
        properties: *const ::std::os::raw::c_char,
    ) -> fiftyoneDegreesDataSetInitStatus;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Destroys the data set releasing all memory available. Ensure all work sets,"]
    #[doc = " cache and pool structs are freed prior to calling this method."]
    #[doc = " @param dataSet pointer to the data set being destroyed"]
    pub fn fiftyoneDegreesDataSetFree(dataSet: *const fiftyoneDegreesDataSet);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Creates a new User-Agent cache used to speed up duplicate detections."]
    #[doc = " The cache must be destroyed with the fiftyoneDegreesFreeCache method."]
    #[doc = " If the cache size is lower then 2 then no cache is created."]
    #[doc = " @param dataSet pointer to the data set"]
    #[doc = " @param size maximum number of items that the cache should store"]
    #[doc = " @returns a pointer to the resultset cache created, or NULL"]
    pub fn fiftyoneDegreesResultsetCacheCreate(
        dataSet: *const fiftyoneDegreesDataSet,
        size: i32,
    ) -> *mut fiftyoneDegreesResultsetCache;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Releases the memory used by the User-Agent cache."]
    #[doc = " @param pointer to the cache created previously"]
    pub fn fiftyoneDegreesResultsetCacheFree(rsc: *const fiftyoneDegreesResultsetCache);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Creates a new work set pool for the data set and User-Agent cache provided."]
    #[doc = " @param dataset pointer to a data set structure"]
    #[doc = " @param cache pointer to a User-Agent cache, or NULL if no cache to be used"]
    #[doc = " @param size number of work sets to hold in the pool"]
    #[doc = " @return a pointer to a new work set pool"]
    pub fn fiftyoneDegreesWorksetPoolCreate(
        dataSet: *mut fiftyoneDegreesDataSet,
        cache: *mut fiftyoneDegreesResultsetCache,
        size: i32,
    ) -> *mut fiftyoneDegreesWorksetPool;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Frees all work sets in the pool and releases all memory. Ensure all work sets"]
    #[doc = " have been released back to the pool before calling this method."]
    #[doc = " @param pool pointer to the pool created by fiftyoneDegreesWorksetPoolCreate"]
    pub fn fiftyoneDegreesWorksetPoolFree(pool: *const fiftyoneDegreesWorksetPool);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Frees the work set pool and it's associated User-Agent cache and dataset if"]
    #[doc = " set."]
    #[doc = " @param pool pointer to the pool created by fiftyoneDegreesWorksetPoolCreate"]
    pub fn fiftyoneDegreesWorksetPoolCacheDataSetFree(pool: *const fiftyoneDegreesWorksetPool);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets a work set from the pool. When operating in multi threaded mode the"]
    #[doc = " methods waits for a work set to be returned from another thread. If in"]
    #[doc = " single threaded operation NULL will be returned if the pool is exhausted."]
    #[doc = " Using a pool makes less sense in single threaded operation."]
    #[doc = " @param pool pointer to the work set pool to get the work set from"]
    #[doc = " @returns pointer to a work set that is free and ready for use, or NULL if"]
    #[doc = "          none are available."]
    pub fn fiftyoneDegreesWorksetPoolGet(
        pool: *mut fiftyoneDegreesWorksetPool,
    ) -> *mut fiftyoneDegreesWorkset;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Creates a new workset to perform matches using the dataset provided."]
    #[doc = " The workset must be destroyed using the freeWorkset method when it's"]
    #[doc = " finished with to release memory."]
    #[doc = " @param dataSet pointer to the data set"]
    #[doc = " @param cache pointer or NULL if not used"]
    #[doc = " @returns a pointer to the workset created"]
    pub fn fiftyoneDegreesWorksetCreate(
        dataSet: *const fiftyoneDegreesDataSet,
        cache: *const fiftyoneDegreesResultsetCache,
    ) -> *mut fiftyoneDegreesWorkset;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Releases the memory used by the workset."]
    #[doc = " If the work set is associated with a pool then the"]
    #[doc = " fiftyOneDegreesWorksetRelease method should be used to return the workset"]
    #[doc = " to the pool its associated with."]
    #[doc = " @param pointer to the workset created previously"]
    pub fn fiftyoneDegreesWorksetFree(ws: *const fiftyoneDegreesWorkset);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Allocates memory sufficiently large to store JSON results."]
    #[doc = " @param ws pointer to a workset with the results to return in JSON"]
    #[doc = " @returns pointer to memory space to store JSON results"]
    pub fn fiftyoneDegreesJSONCreate(
        ws: *mut fiftyoneDegreesWorkset,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Frees the memory space previously allocated by fiftyoneDegreesJSONCreate."]
    #[doc = " @param json pointer to the memory space to be freed"]
    pub fn fiftyoneDegreesJSONFree(json: *mut ::std::os::raw::c_void);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Allocates memory sufficiently large to store CSV results."]
    #[doc = " @param ws pointer to a workset with the results to return in CSV"]
    #[doc = " @returns pointer to memory space to store CSV results"]
    pub fn fiftyoneDegreesCSVCreate(ws: *mut fiftyoneDegreesWorkset)
        -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Frees the memory space previously allocated by fiftyoneDegreesCSVCreate."]
    #[doc = " @param csv pointer to the memory space to be freed"]
    pub fn fiftyoneDegreesCSVFree(csv: *mut ::std::os::raw::c_void);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Main entry method used for perform a match. First the User-Agent cache is"]
    #[doc = " checked to determine if the User-Agent has already been found. If not then"]
    #[doc = " detection is performed. The cache is then updated before the resultset is"]
    #[doc = " returned."]
    #[doc = " @param ws pointer to a work set to be used for the match created via"]
    #[doc = "        createWorkset function"]
    #[doc = " @param userAgent pointer to the target user agent"]
    pub fn fiftyoneDegreesMatch(
        ws: *mut fiftyoneDegreesWorkset,
        userAgent: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Passed array of HTTP header names and values. Sets the workset to"]
    #[doc = " the results for these headers."]
    #[doc = " @param ws pointer to a work set to be used for the match created via"]
    #[doc = "        createWorkset function"]
    #[doc = " @param httpHeaderNames array of HTTP header names i.e. User-Agent"]
    #[doc = " @param httpHeaderValues array of HTTP header values"]
    #[doc = " @param the number of entires in each array"]
    pub fn fiftyoneDegreesMatchWithHeadersArray(
        ws: *mut fiftyoneDegreesWorkset,
        httpHeaderNames: *mut *const ::std::os::raw::c_char,
        httpHeaderValues: *mut *const ::std::os::raw::c_char,
        httpHeaderCount: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Passed a string where each line contains the HTTP header name and value."]
    #[doc = " The first space character seperates the HTTP header name at the beginning of"]
    #[doc = " the line and the value."]
    #[doc = " @param ws pointer to a work set to be used for the match created via"]
    #[doc = "        createWorkset function"]
    #[doc = " @param httpHeaders is a list of HTTP headers and values on each line"]
    #[doc = " @param length number of characters in the headers array to consider"]
    pub fn fiftyoneDegreesMatchWithHeadersString(
        ws: *mut fiftyoneDegreesWorkset,
        httpHeaders: *const ::std::os::raw::c_char,
        length: usize,
    );
}
